# earlycon

./: Cargo.toml  README.md
earlycon/: Cargo.toml  README.md
earlycon/src/: earlydev.rs  lib.rs
earlycon/src/platform/aarch64_qemu_virt/: mod.rs
earlycon/src/platform/loongarch64_qemu_virt/: mod.rs
earlycon/src/platform/riscv64_qemu_virt/: mod.rs
earlycon/src/platform/um/: mod.rs
earlycon/src/platform/x86_pc/: mod.rs  uart16550.rs
rt_earlycon/: Cargo.toml  README.md
rt_earlycon/src/: lib.rs
top_earlycon/: Cargo.toml
top_earlycon/src/: lib.rs
