[package]
name = "rt_earlycon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boot = { git = "ssh://git@github.com/shilei-massclouds/boot.git" }
earlycon = { git = "ssh://git@github.com/shilei-massclouds/earlycon.git" }
